discussion/kv_engine/125163/125163_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 15:48:56.000000000
Message: 
Uploaded patch set 8: New patch set was added with same tree, parent, and commit message as Patch Set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 17:30:44.000000000
Message: 
Patch Set 8:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1638/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1638/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3117/ : FAILURE

Failure of a CTest test [2020-04-08T16:38:10.870Z] 310/378 Test #233: ep_testsuite_dcp.ephemeral.comp_passive ..................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3117/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/161/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10914/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3061/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2109/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3052/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
